--- a/src/components/Info/Form/Form.css
+++ b/src/components/Info/Form/Form.css
@@ -25,7 +25,7 @@
     display: inline-block;
     text-align: center;
     margin-right: 5%;
-    width: auto;
+    width: 96px;
     height: 130px;
 }
 
